--- a/index.html
+++ b/index.html
@@ -13,33 +13,43 @@
         <h1>Jiu Jitsu</h1>
     </div>
     <div class="frase">
-        <h4>Este site tem como objetivo te informar um pouco sobre o Jiu Jitsu e ao final dele  <br>contém um quiz para medir o seu conhecimento sobre </h4>
+        <h4>Este site tem como objetivo te apresentar o Jiu Jitsu e, ao final, você poderá testar seus conhecimentos com um quiz. </h4>
     </div>
     <br>
     <br>
-    <h2> Origens do Jiu-Jitsu</h2>
-    <p>O jiu-jitsu tem raízes no Japão feudal, como uma arte de combate corpo a corpo usada pelos samurais. Era chamada de jujutsu ou jujitsu, que significa algo como "arte suave" ou "técnica gentil". <br> A ideia era usar a força do oponente contra ele, com alavancas, torções e quedas, já que os samurais nem sempre podiam usar armas.</p>    
+    <br>
+    <div class="line1"></div>
+</center>
     <br>
     <br>
-    <h2>Do Japão ao Brasil</h2>
-    <p>No começo do século 20, um mestre japonês chamado Mitsuyo Maeda veio ao Brasil em uma missão de difusão do jiu-jitsu e do judô (na época, ainda bem misturados). <br> Em 1914, ele chegou ao Pará, e foi lá que conheceu um cara chamado Gastão Gracie, que ajudou Maeda a se estabelecer. <br>
-    Maeda, como forma de agradecimento, começou a ensinar jiu-jitsu ao filho de Gastão: Carlos Gracie.</p>
+    <div class="flexbox">
+        <div class="texto1">
+            <h2> Origens do Jiu-Jitsu</h2>
+            <p>O jiu-jitsu tem raízes no Japão feudal, como uma arte de combate corpo a corpo usada pelos samurais. Era chamada de jujutsu ou jujitsu, que significa algo como "arte suave" ou "técnica gentil". <br> A ideia era usar a força do oponente contra ele, com alavancas, torções e quedas, já que os samurais nem sempre podiam usar armas.</p>    
+        
     <br>
     <br>
-    <h2>Nascimento do Jiu-Jitsu Brasileiro (BJJ)</h2>
-    <p>Carlos Gracie aprendeu com Maeda e depois ensinou aos seus irmãos, especialmente o Hélio Gracie, que era mais franzino. <br> Por isso, o Hélio adaptou as técnicas para depender menos da força e mais da alavanca, técnica e estratégia. Isso deu origem ao que hoje chamamos de Brazilian Jiu-Jitsu (BJJ). <br>
-     A família Gracie começou a desafiar lutadores de outras artes marciais em combates reais — era o famoso “vale tudo” — pra provar a eficiência do BJJ.</p>
+            <h2>Do Japão ao Brasil</h2>
+            <p>No começo do século 20, um mestre japonês chamado Mitsuyo Maeda veio ao Brasil em uma missão de difusão do jiu-jitsu e do judô (na época, ainda bem misturados). <br> Em 1914, ele chegou ao Pará, e foi lá que conheceu um cara chamado Gastão Gracie, que ajudou Maeda a se estabelecer. <br>
+            Maeda, como forma de agradecimento, começou a ensinar jiu-jitsu ao filho de Gastão: Carlos Gracie.</p>
+        </div>
     <br>
-    <br>
-    <h2>O Jiu-Jitsu no mundo</h2>
-    <p>Nos anos 90, o jiu-jitsu estourou no mundo com o nascimento do UFC (Ultimate Fighting Championship). <br>Um dos fundadores foi o Rorion Gracie, que colocou seu irmão, Royce Gracie, pra lutar e mostrar como o BJJ era eficiente mesmo contra adversários maiores e mais fortes. <br>
-     Depois disso, o jiu-jitsu virou febre nos EUA, Europa, Ásia... e continua crescendo até hoje, tanto como esporte quanto como defesa pessoal.</p>
+            <div class="texto2">
+            <h2>Nascimento do Jiu-Jitsu Brasileiro (BJJ)</h2>
+            <p>Carlos Gracie aprendeu com Maeda e depois ensinou aos seus irmãos, especialmente o Hélio Gracie, que era mais franzino. <br> Por isso, o Hélio adaptou as técnicas para depender menos da força e mais da alavanca, técnica e estratégia. Isso deu origem ao que hoje chamamos de Brazilian Jiu-Jitsu (BJJ). <br>
+            A família Gracie começou a desafiar lutadores de outras artes marciais em combates reais — era o famoso “vale tudo” — pra provar a eficiência do BJJ.</p>
+    <br>        
+            <h2>O Jiu-Jitsu no mundo</h2>
+            <p>Nos anos 90, o jiu-jitsu estourou no mundo com o nascimento do UFC (Ultimate Fighting Championship). <br>Um dos fundadores foi o Rorion Gracie, que colocou seu irmão, Royce Gracie, pra lutar e mostrar como o BJJ era eficiente mesmo contra adversários maiores e mais fortes. <br>
+            Depois disso, o jiu-jitsu virou febre nos EUA, Europa, Ásia... e continua crescendo até hoje, tanto como esporte quanto como defesa pessoal.</p>
+            </div>
+        </div>
     <br>
     <br>
     <h2>Faixas no Jiu-Jitsu</h2>
     <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEipujJOAaKeHbLQp-ipnf5SxInVyzknMX0wHqL2DfHcHBQKYqs-6s2WxUMKVMi4Ddw9hzsUa9e_orz2rhEyctJXKmv7bgiKSU2I0cUdYKVpAGnyvr5AX4ZAvN7YmWXfUTm5NUI9uiDzZTE/s1600/belts.jpg" alt="">
     </div>
-</center>
+
 
 
 </body>
