add JavaScript do Quiz e melhorando o design

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Jiu Jitsu</title>
     <link rel="stylesheet" href="site.css">
+    <script src="quiz.js" defer></script>
 </head>
 <body > 
     
@@ -221,11 +222,8 @@
     <label for="preta">Preta</label><br></div>
     <br>
     <br>
-    <button onclick="calcular()">Enviar respostas</button>
+    <button onclick="calcular()" class="button">Enviar respostas</button>
 </div>
 </center>
-
-
-
 </body>
 </html>
