Organizando em pastas

--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
-    <link rel="stylesheet" href="cadastro.css">
+    <link rel="stylesheet" href="../css/cadastro.css">
 </head>
 <body>
 <div class="box">
@@ -22,13 +22,13 @@
     Confirme a senha: <input type="password" id="confirmar">
     <br><br>
     <button class="button" onclick="cadastrar()">CADASTRAR</button> <br><br>
-    <a href="C:/Users/User/Desktop/GitHub/quiz-jj-pi/login.html" class="button1">Ir para Login</a>
+    <a href="C:/Users/User/Desktop/GitHub/quiz-jj-pi/html/login.html" class="button1">Ir para Login</a>
 </div>
 </body>
 </html>
 
 <script>
         function cadastrar() {
-        window.location.href = "C:/Users/User/Desktop/GitHub/quiz-jj-pi/login.html";
+        window.location.href = "C:/Users/User/Desktop/GitHub/quiz-jj-pi/html/login.html";
     }
 </script>
