--- a/html/login.html
+++ b/html/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="cadastro.css">
+    <link rel="stylesheet" href="../css/cadastro.css">
 </head>
 <body>
     <div class="box">
@@ -26,11 +26,11 @@
 </html>
 <script>
     function login() {
-        window.location.href = "C:/Users/User/Desktop/GitHub/quiz-jj-pi/index.html";
+        window.location.href = "C:/Users/User/Desktop/GitHub/quiz-jj-pi/html/index.html";
     }
 
     function cadastrar() {
-        window.location.href = "C:/Users/User/Desktop/GitHub/quiz-jj-pi/cadastro.html";
+        window.location.href = "C:/Users/User/Desktop/GitHub/quiz-jj-pi/html/cadastro.html";
     }
 
 </script>
