--- a/html/telaResultado.html
+++ b/html/telaResultado.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" href="resultado.css">
+  <link rel="stylesheet" href="../css/resultado.css">
   <title>Resultado</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -28,7 +28,7 @@
         data: { 
             labels: graficoA.map((_, i) => `Pergunta ${i + 1}`),       
             datasets: [{
-            label: 'pontosGrafico',
+            label: 'Pontos',
             data: graficoA,
             borderColor: 'white',
             backgroundColor: 'black'
