Conectando login e cadastro com BD

--- a/public/html/cadastro.html
+++ b/public/html/cadastro.html
@@ -20,7 +20,7 @@
     Confirme a senha: <input type="password" id="confirmar">
     <br><br>
     <button class="button" onclick="cadastrar()">CADASTRAR</button> <br><br>
-    <a href="C:/Users/User/Desktop/GitHub/quiz-jj-pi/public/html/login.html" class="button1">Ir para Login</a>
+    <a href="../html/login.html" class="button1">Ir para Login</a>
 </div>
 </body>
 </html>
@@ -35,8 +35,6 @@ if (nome.value == '' || email.value =='' || senha.value == '' || confirmar == ''
 } else {
   
 
-    //Recupere o valor da nova input pelo nome do id
-    // Agora vá para o método fetch logo abaixo
     var nomeVar = nome.value;
     var emailVar = email.value;
     var senhaVar = senha.value;
