--- a/public/html/login.html
+++ b/public/html/login.html
@@ -91,7 +91,7 @@ function finalizarAguardar(texto) {
                     console.log(JSON.stringify(json));
                     sessionStorage.EMAIL_USUARIO = json.email;
                     sessionStorage.NOME_USUARIO = json.nome;
-                    sessionStorage.ID_USUARIO = json.id;
+                    sessionStorage.ID_USUARIO = json.idCadastro;
                     
 
                     setTimeout(function () {
