Adicionando gráfico proveniente dos dados do BD

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -8,13 +8,22 @@
 </head>
 <body > 
 
-    <nav>
-        <h3 class="nav-bar">Olá, <span id="b_usuario"></span>!</h3>        
-        <a class="nav-bar" href="#info">Informações</a>
-        <a class="nav-bar" href="#quiz">Quiz</a>
-        <a class="nav-bar" href="#feedback">Feedback</a>
-        <a class="nav-bar" href="#autor">Autor</a>
-    </nav>
+<nav>
+  <div class="nav-left">
+    <h3 class="nav-bar2">Olá, <span id="b_usuario"></span>!</h3>  
+  </div>
+
+  <div class="nav-container">
+    <a class="nav-bar" href="#info">Informações</a>
+    <a class="nav-bar" href="#quiz">Quiz</a>
+    <a class="nav-bar" href="#feedback">Feedback</a>
+    <a class="nav-bar" href="#autor">Autor</a>
+  </div>
+
+  <div class="nav-right">
+    <a class="nav-bar3" href="../html/login.html">Sair...</a>
+  </div>
+</nav>
     
     <center>
     <div class="titulo">
@@ -26,9 +35,10 @@
 
     <div class="line1"></div>
 </center>
+    <span id="info"></span>
     <br>
     <br>
-    <div id="info" class="flexbox">
+    <div class="flexbox">
         <div class="texto1">
             <h2>Origens do Jiu-Jitsu</h2>
             <p>O jiu-jitsu tem raízes no Japão feudal, como uma arte de combate corpo a corpo usada pelos samurais. Era chamada de jujutsu ou jujitsu, que significa algo como "arte suave" ou "técnica gentil". A ideia era usar a força do oponente contra ele, com alavancas, torções e quedas, já que os samurais nem sempre podiam usar armas.</p>
@@ -106,8 +116,9 @@
     <br>
     <br>
     <br>
+    <span id="quiz"></span>
 
-    <div id="quiz" class="flexbox2">
+    <div class="flexbox2">
             <h1>Quiz Jiu-Jitsu</h1>
             <h3>Divirta-se e teste agora os seus conhecimentos sobre a arte-suave <br> em um formulario interativo e super divertido!</h3>
             <div class="line1"></div>
@@ -117,8 +128,10 @@
     <br>
     <br>
     <br>
+    
+        <span id="feedback"></span>
 
-        <div id="feedback" class="flexbox2">
+        <div class="flexbox2">
             <h1>Página de Feedback</h1>
             <h3>Deixe a sua opnião sobre tudo do site e conte como foi sua experiência! </h3>
             <div class="line1"></div>
@@ -130,6 +143,7 @@
 <br>
 <br>
 <br>
+<span id="feedback"></span>
 <div id="autor" class="flexbox3">
     <img class="imgDavi" src="../img/imgdavijj.jpg" alt="">
     <div class="texto2"><h2>Autor</h2>
