--- a/public/html/cadastro.html
+++ b/public/html/cadastro.html
@@ -11,7 +11,8 @@
     <div class="titulo"><h1>Cadastre-se já!</h1></div>
     <div class="line1"></div>
     <h3>Insira todos os campos corretamente</h3>
-    Nome Completo: <input id="nome" placeholder="João da Silva Cordeiro">
+    <br>
+    Como você gostaria de ser chamado? <input id="nome" placeholder="João">
     <br><br>
     E-mail: <input id="email" placeholder="joao@gmail.com">
     <br><br>
@@ -19,20 +20,27 @@
     <br><br>
     Confirme a senha: <input type="password" id="confirmar">
     <br><br>
-    <button class="button" onclick="cadastrar()">CADASTRAR</button> <br><br>
+    <button class="button" onclick="cadastrar()">CADASTRAR</button> <br><br>    
     <a href="../html/login.html" class="button1">Ir para Login</a>
 </div>
 </body>
 </html>
 
 <script>
+
     function cadastrar() {
     // aguardar();
 if (nome.value == '' || email.value =='' || senha.value == '' || confirmar == '') {
   alert('Preencha os campos corretamente!!!')
 } else if(senha.value != confirmar.value){
-  alert('A confirmação da senha NÃO corresponde a senha informada')
-} else {
+  alert('A confirmação da senha NÃO corresponde a senha informada') 
+}else if (!email.value.includes('@') || !email.value.includes('.')) {
+  alert('Por favor, insira um endereço de e-mail válido.');
+  return;
+}
+
+else {
+
   
 
     var nomeVar = nome.value;
@@ -61,11 +69,10 @@ if (nome.value == '' || email.value =='' || senha.value == '' || confirmar == ''
         if (resposta.ok) {
         
 
-      setTimeout(() => {
-        alert('Cadastro Realizado com Sucesso!!')
+      alert('Cadastro Realizado com sucesso!')
   window.location = "/html/login.html";
   
-}, 2000);
+
 
           limparFormulario();
           finalizarAguardar();
