--- a/public/html/index.html
+++ b/public/html/index.html
@@ -123,7 +123,7 @@
             <h3>Divirta-se e teste agora os seus conhecimentos sobre a arte-suave <br> em um formulario interativo e super divertido!</h3>
             <div class="line1"></div>
     <button onclick="ir()" class="button">Ir para quiz</button>
-    <button onclick="irD()" class="button">Ver Seus Desempenhos no Quiz</button>
+    <button onclick="irD()" class="button">Ver meus desempenhos no quiz</button>
     </div>
     
     <br>
